# openvm

./: .gitignore  CLAUDE.md  run_elf_test.sh  run_riscof.sh  transpile_elf.rs
.cursor/rules/: code_standards.mdc  development_workflow.mdc  project_architecture.mdc
crates/: AI_DOCS.md
crates/circuits/mod-builder/src/: AI_DOCS.md  AI_INDEX.md  CLAUDE.md  COMPONENT_AI_DOCS.md  EXAMPLES.md  IMPLEMENTATION_GUIDE.ai.md  INTEGRATION.md  QUICK_REFERENCE.ai.md
crates/circuits/poseidon2-air/src/: COMPONENT_AI_DOCS.md  EXAMPLES.md  INTEGRATION.md
crates/circuits/sha256-air/src/: AI_DOCS.md  AI_INDEX.md  COMPONENT_AI_DOCS.md  EXAMPLES.md  IMPLEMENTATION_GUIDE.ai.md  INTEGRATION.md  QUICK_REFERENCE.ai.md
crates/cli/: Cargo.toml
crates/cli/src/: COMPONENT_AI_DOCS.md  EXAMPLES.md  INTEGRATION.md
crates/cli/src/commands/: AI_DOCS.md  AI_INDEX.md  CLAUDE.md  COMPONENT_AI_DOCS.md  EXAMPLES.md  IMPLEMENTATION_GUIDE.ai.md  INTEGRATION.md  QUICK_REFERENCE.ai.md  run.rs  (+1 more)
crates/prof/src/: AI_DOCS.md  AI_INDEX.md  CLAUDE.md  COMPONENT_AI_DOCS.md  EXAMPLES.md  IMPLEMENTATION_GUIDE.ai.md  INTEGRATION.md  QUICK_REFERENCE.ai.md
crates/sdk/src/: AI_DOCS.md  AI_INDEX.md  COMPONENT_AI_DOCS.md  EXAMPLES.md  IMPLEMENTATION_GUIDE.ai.md  INTEGRATION.md  QUICK_REFERENCE.ai.md  lib.rs
elf-test/: Cargo.toml
elf-test/src/: main.rs
extensions/rv32-adapters/src/: AI_DOCS.md  AI_INDEX.md  IMPLEMENTATION_GUIDE.ai.md  QUICK_REFERENCE.ai.md
extensions/rv32im/guest/: CLAUDE.md  CURSOR.mdc
guest-libs/ff_derive/src/: AI_DOCS.md  AI_INDEX.md  IMPLEMENTATION_GUIDE.ai.md  QUICK_REFERENCE.ai.md
(+300 files in other folders)
